--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
         <h1>Zhenhua Yu</h1>
         <p>PhD candidate of Robotics<br>Imperial College London</p>
         <p>Research Affiliate<br><a href="https://www.imperial.ac.uk/morph-lab">Morph Lab,Dyson School of Design Engineering </a></p>
-    <h3><a href="https://https://dr-zhenhua-yu.github.io//">Home</a></h3>
-        <h3><a href="https://https://dr-zhenhua-yu.github.io//research.html">Research</a></h3>
-    <h3><a href="https://https://dr-zhenhua-yu.github.io//research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://https://dr-zhenhua-yu.github.io//code.html">Code</a></h3> 
-        <h3><a href="https://https://dr-zhenhua-yu.github.io//teaching.html">Teaching</a></h3> 
-        <h3><a href="https://https://dr-zhenhua-yu.github.io//personal.html">Personal</a></h3>
+    <h3><a href="https://dr-zhenhua-yu.github.io//">Home</a></h3>
+        <h3><a href="https://dr-zhenhua-yu.github.io//research.html">Research</a></h3>
+    <h3><a href="https://dr-zhenhua-yu.github.io//research/CV.pdf">CV</a></h3>  
+        <h3><a href="https://dr-zhenhua-yu.github.io//code.html">Code</a></h3> 
+        <h3><a href="https://dr-zhenhua-yu.github.io//teaching.html">Teaching</a></h3> 
+        <h3><a href="https://dr-zhenhua-yu.github.io//personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
