--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Zhenhua Yu's Homepage</title>
-
+     <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="description" content="Yunhe Wang is currently a senior researcher at Huawei Noah's Ark Lab">
+  <meta name="keywords" content="Zhenhua Yu, 于振华, wangyunhe, Yunhe, Wang, Deep Learning, Huawei, PKU, Computer, Vision">
+  <meta name="author" content="Zhenhua Yu" />
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
