--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <header>
         <h1>Zhenhua Yu</h1>
         <p>PhD candidate of Robotics<br>Imperial College London</p>
-        <p>Research Affiliate<br><a href="https://www.imperial.ac.uk/morph-lab">Morph Lab,Dyson School of Design Engineering </a></p>
+        <p>Research Affiliate<br><a href="https://www.imperial.ac.uk/morph-lab">Morph Lab<br>Dyson School of Design Engineering </a></p>
     <h3><a href="https://dr-zhenhua-yu.github.io//">Home</a></h3>
         <h3><a href="https://dr-zhenhua-yu.github.io//research.html">Research</a></h3>
     <h3><a href="https://dr-zhenhua-yu.github.io//research/CV.pdf">CV</a></h3>  
@@ -109,7 +109,7 @@
         </div>
         <br>
 
-    <p><b>Contact:</b><br>Morph Lab,Dyson School of Design Engineering<br>Imperial College London<br>Level 2, Dyson Building <br>London, SW7 2AZ</p>
+    <p><b>Contact:</b><br>Morph Lab<br>Dyson School of Design Engineering<br>Imperial College London<br>Level 2, Dyson Building <br>London, SW7 2AZ</p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
