--- a/index.html
+++ b/index.html
@@ -100,11 +100,10 @@
         <div class="social-row">
           <a href="z.yu18@imperial.ac.uk" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
           <a href="https://scholar.google.co.uk/citations?hl=en&view_op=list_works&gmla=AJsN-F42uQuk2u5HeMmTIfLSPZOneaoapP2QeoAPZYBmHVEaoMyO9fLYJDtqgNBl03jJWYutL-9Oka5xVMcBgqwc4cEmbBtqJ9uxcseMxo0yxgG-RPmnC2U&user=2qygvtQAAAAJ" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
-          <a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>
-          <a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>
+          <a href="https://www.researchgate.net/profile/Zhenhua-Yu-6"><i class="fa fa-fw fa-share-alt-square"></i> ReGate</a><br>
           <a href="https://github.com/Dr-Zhenhua-Yu"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
           <a href="https://twitter.com/ZhenhuaYu_IC" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
-          <a href="http://linkedin.com/in/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
+          <a href="https://www.linkedin.com/in/zhenhua-yu-036998152/" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
           <br>
         </div>
         <br>
