--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
           <a href="https://github.com/Dr-Zhenhua-Yu"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
           <a href="https://twitter.com/ZhenhuaYu_IC" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
           <a href="https://www.linkedin.com/in/zhenhua-yu-036998152/" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
+          <a href="https://www.linkedin.com/in/zhenhua-yu-036998152/" class="author-social" target="_blank"><i class="fa fa-fw fa-zhihu-square"></i> LinkedIn</a><br>
           <br>
         </div>
         <br>
