--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <p>I am currently an PhD candidate of <a href="http://www.ou.edu/cas/economics">Robotics</a> at the <a href="http://www.ou.edu/">Imperial College London</a> and Research Affiliate at the <a href="https://www.iza.org/">Institute for the Study of Labor (IZA)</a>. I graduated with a PhD in <a href="http://econ.duke.edu">Economics</a> from <a href="http://www.duke.edu">Duke University</a> in May 2015.</p>
       <p>My research interests include labor economics, urban economics, the economics of education, and applications of machine learning.</p>
 
-      <p>I have been awarded the <a href="https://twitter.com/AmazonScience/status/1511342518457229312">Amazon PhD Prizes for Outstanding Achievement in Robotics</a> ! <a href="https://twitter.com/AmazonScience/status/1511342518457229312" target="_blank">The Queen Mary UK Best PhD in Robotics Award 2020 1st place</a></p>
+      <p>I have been awarded the <a href="https://twitter.com/AmazonScience/status/1511342518457229312" target="_blank">Amazon PhD Prizes for Outstanding Achievement in Robotics</a>!</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
