--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <h3><a href="https://dr-zhenhua-yu.github.io//">Home</a></h3>
         <h3><a href="https://dr-zhenhua-yu.github.io//research.html">Research</a></h3>
     <h3><a href="https://dr-zhenhua-yu.github.io//research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://dr-zhenhua-yu.github.io//code.html">Code</a></h3> 
+        <h3><a href="https://dr-zhenhua-yu.github.io//Research.html">Research</a></h3> 
         <h3><a href="https://dr-zhenhua-yu.github.io//teaching.html">Teaching</a></h3> 
         <h3><a href="https://dr-zhenhua-yu.github.io//personal.html">Personal</a></h3>
     <b>Social</b><br>
@@ -116,7 +116,7 @@
       <p>I am currently an PhD candidate of <a href="http://www.ou.edu/cas/economics">Robotics</a> at the <a href="http://www.ou.edu/">Imperial College London</a> and Research Affiliate at the <a href="https://www.iza.org/">Institute for the Study of Labor (IZA)</a>. I graduated with a PhD in <a href="http://econ.duke.edu">Economics</a> from <a href="http://www.duke.edu">Duke University</a> in May 2015.</p>
       <p>My research interests include labor economics, urban economics, the economics of education, and applications of machine learning.</p>
 
-      <p>I have been awarded the <a href="https://twitter.com/AmazonScience/status/1511342518457229312" target="_blank">Amazon PhD Prizes for Outstanding Achievement in Robotics</a>!</p>
+      <p>I have been awarded the <a href="https://twitter.com/AmazonScience/status/1511342518457229312" target="_blank">Amazon PhD Prizes for Outstanding Achievement in Robotics for my PhD research</a>!</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
