--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <h3><a href="https://dr-zhenhua-yu.github.io//">Home</a></h3>
         <h3><a href="https://dr-zhenhua-yu.github.io//research.html">Research</a></h3>
     <h3><a href="https://dr-zhenhua-yu.github.io//research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://dr-zhenhua-yu.github.io//Research.html">Research</a></h3> 
+        <h3><a href="https://dr-zhenhua-yu.github.io//Publication.html">Publication</a></h3> 
         <h3><a href="https://dr-zhenhua-yu.github.io//teaching.html">Teaching</a></h3> 
         <h3><a href="https://dr-zhenhua-yu.github.io//personal.html">Personal</a></h3>
     <b>Social</b><br>
