--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
 
       <p>I have been awarded the <a href="https://twitter.com/AmazonScience/status/1511342518457229312" target="_blank">Amazon PhD Prizes for Outstanding Achievement in Robotics for my PhD research</a>!</p>
       </section>
+     <h2><a id="computer-code" class="anchor" href="#computercode" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h2>
+    <h3>Julia</h3>
     </div>
     <script src="javascripts/scale.fix.js"></script>
   </body>
