--- a/index.html
+++ b/index.html
@@ -120,7 +120,14 @@
 
       <hr />
       <h3>Recent books I've read and highly recommend</h3>
-
+      <ul>
+        <li><em><a href="https://www.amazon.com/Positive-Intelligence-Individuals-Achieve-Potential/dp/1608322785">Positive Intelligence</a></em>, by Shirzad Chamine</li>
+        <li><em><a href="https://www.amazon.com/Obesity-Code-Unlocking-Secrets-Weight/dp/1771641258/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=">The Obesity Code</a></em>, by Dr. Jason Fung</li>
+        <li><em><a href="https://blog.supplysideliberal.com/post/2019/6/18/miles-kimball-on-diet-and-health-a-readers-guide">Collection of Blog Posts on Obesity Reduction</a></em>, by Miles Kimball</li>
+        <li><em><a href="https://www.amazon.com/World-Without-Email-Reimagining-Communication/dp/0525536558">A World Without Email</a></em>, <em><a href="https://www.amazon.com/Digital-Minimalism-Choosing-Focused-Noisy/dp/0525536515">Digital Minimalism</a></em> and <em><a href="https://www.amazon.com/dp/B00X47ZVXM">Deep Work</a></em>, all by Cal Newport</li>
+        <li><em><a href="https://www.amazon.com/Atomic-Habits-Proven-Build-Break/dp/0735211299">Atomic Habits</a></em>, by James Clear</li>
+        <li><em><a href="http://joshuafoer.com/moonwalking-with-einstein/">Moonwalking with Einstein</a></em>, by Joshua Foer</li>
+      </ul>
     </div>
     <script src="javascripts/scale.fix.js"></script>
   </body>
