--- a/Publication.html
+++ b/Publication.html
@@ -8,8 +8,8 @@
      <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="description" content="Yunhe Wang is currently a senior researcher at Huawei Noah's Ark Lab">
-  <meta name="keywords" content="Zhenhua Yu, 于振华, wangyunhe, Yunhe, Wang, Deep Learning, Huawei, PKU, Computer, Vision">
+  <meta name="description" content="Zhenhua Yu is currently a PhD at Imperial College London">
+  <meta name="keywords" content="Zhenhua Yu, 于振华, yuzhenhua, zhenhua, yu, whisker, Imperial college, robot">
   <meta name="author" content="Zhenhua Yu" />
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
