--- a/research.html
+++ b/research.html
@@ -5,8 +5,13 @@
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tyler Ransom by tyleransom</title>
-
+        <title>Zhenhua Yu's Homepage</title>
+     <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="description" content="Zhenhua Yu is currently a PhD at Imperial College London">
+  <meta name="keywords" content="Zhenhua Yu, 于振华, yuzhenhua, zhenhua, yu, whisker, Imperial college, robot">
+  <meta name="author" content="Zhenhua Yu" />
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
