--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 
       <hr />
       <h3>Recent books I've read and highly recommend</h3>
+      <p><b>Health and Personal Development</b></p>
       <ul>
         <li><em><a href="https://www.amazon.com/Positive-Intelligence-Individuals-Achieve-Potential/dp/1608322785">Positive Intelligence</a></em>, by Shirzad Chamine</li>
         <li><em><a href="https://www.amazon.com/Obesity-Code-Unlocking-Secrets-Weight/dp/1771641258/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=">The Obesity Code</a></em>, by Dr. Jason Fung</li>
