--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
       <p>I have been awarded the <a href="https://twitter.com/AmazonScience/status/1511342518457229312" target="_blank">Amazon PhD Prizes for Outstanding Achievement in Robotics for my PhD research</a>!</p>
 
       <hr />
-      <h3>Recent books I've read and highly recommend</h3>
-      <p><b>Health and Personal Development</b></p>
+      <h3>News</h3>
+      <p><b>2022</b></p>
       <ul>
         <li><em><a href="https://www.amazon.com/Positive-Intelligence-Individuals-Achieve-Potential/dp/1608322785">Positive Intelligence</a></em>, by Shirzad Chamine</li>
         <li><em><a href="https://www.amazon.com/Obesity-Code-Unlocking-Secrets-Weight/dp/1771641258/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=">The Obesity Code</a></em>, by Dr. Jason Fung</li>
