--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     
       </header>
       <section>
-      <img src="IMG_2409_edit_pro_photo_square_small.jpg" height="250" width="250" alt="Tyler Ransom"></h3>
+      <img src="IMG_2409_edit_pro_photo_square_small.jpg" height="320" width="250" alt="Zhenhua Yu"></h3>
       <p>I am currently an PhD candidate of <a href="http://www.ou.edu/cas/economics">Robotics</a> at the <a href="http://www.ou.edu/">Imperial College London</a> and Research Affiliate at the <a href="https://www.iza.org/">Institute for the Study of Labor (IZA)</a>. I graduated with a PhD in <a href="http://econ.duke.edu">Economics</a> from <a href="http://www.duke.edu">Duke University</a> in May 2015.</p>
       <p>My research interests include labor economics, urban economics, the economics of education, and applications of machine learning.</p>
 
