--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <p>I have been awarded the <a href="https://twitter.com/AmazonScience/status/1511342518457229312" target="_blank">Amazon PhD Prizes for Outstanding Achievement in Robotics for my PhD research</a>!</p>
 
       <hr />
-      <h3>News</h3>
+      <h3><b>News<b></h3>
       <p><b>2022</b></p>
       <ul>
         <li><em><a href="https://www.amazon.com/Positive-Intelligence-Individuals-Achieve-Potential/dp/1608322785">Positive Intelligence</a></em>, by Shirzad Chamine</li>
