--- a/Publication.html
+++ b/Publication.html
@@ -113,7 +113,7 @@
     
       </header>
       <section>
-  <h2><a id="computer-code" class="anchor" href="#computercode" aria-hidden="true"><span class="octicon octicon-link"></span></a>Computer Code</h2>
+  <h2><a id="2022" class="anchor" href="#computercode" aria-hidden="true"><span class="octicon octicon-link"></span></a>2022</h2>
     <h3>Julia</h3>
         <ul>
           <li><a href="https://tyleransom.github.io/research/JuliaPresentation.pdf">Introduction to Julia for economists</a>: Slides from a short presentation that introduces <a href="http://julialang.org/">Julia</a>.</li>
@@ -122,13 +122,24 @@
           <li><a href="https://github.com/tyleransom/EMalgorithmExample"><code>EM algorithm example</code></a>: Code to generate data and estimate simple versions of the EM algorithm for estimation of models with discrete type-specific unobserved heterogeneity.</li>
         </ul>
     <hr>
-
-    <h2><a id="machine-learning" class="anchor" href="#machinelearning" aria-hidden="true"><span class="octicon octicon-link"></span></a>Machine Learning Resources</h2>
+  <h2><a id="2021" class="anchor" href="#computercode" aria-hidden="true"><span class="octicon octicon-link"></span></a>2021</h2>
+    <h3>Julia</h3>
         <ul>
-          <li><a href="https://tyleransom.github.io/research/IntroMachineLearning.pdf">Introduction to machine learning for social scientists</a>: Slides from a short presentation that outlines what machine learning is and how social scientists can benefit from using its methods.</li>
-          <li><a href="https://homes.cs.washington.edu/~pedrod/papers/cacm12.pdf">Practical tips for machine learning practitioners</a>, via Pedro Domingos.</li>
-          <li><a href="http://www.basicbooks.com/full-details?isbn=9780465065707">The Master Algorithm</a>, written by Pedro Domingos.</li>
+          <li><a href="https://tyleransom.github.io/research/JuliaPresentation.pdf">Introduction to Julia for economists</a>: Slides from a short presentation that introduces <a href="http://julialang.org/">Julia</a>.</li>
+          <li><a href="http://quantecon.org/notebooks.html">QuantEcon's notebook gallery</a>, which includes a few of my notebooks introducing data analysis and optimization in <a href="http://julialang.org/">Julia</a>.</li>
+          <li><a href="https://github.com/tyleransom/Julia">My Github repository</a>, which introduces basic econometric models in <a href="http://julialang.org/">Julia</a>.</li>
+          <li><a href="https://github.com/tyleransom/EMalgorithmExample"><code>EM algorithm example</code></a>: Code to generate data and estimate simple versions of the EM algorithm for estimation of models with discrete type-specific unobserved heterogeneity.</li>
         </ul>
+    <hr>
+<h2><a id="2020 before" class="anchor" href="#computercode" aria-hidden="true"><span class="octicon octicon-link"></span></a>2020 before</h2>
+    <h3>Julia</h3>
+        <ul>
+          <li><a href="https://tyleransom.github.io/research/JuliaPresentation.pdf">Introduction to Julia for economists</a>: Slides from a short presentation that introduces <a href="http://julialang.org/">Julia</a>.</li>
+          <li><a href="http://quantecon.org/notebooks.html">QuantEcon's notebook gallery</a>, which includes a few of my notebooks introducing data analysis and optimization in <a href="http://julialang.org/">Julia</a>.</li>
+          <li><a href="https://github.com/tyleransom/Julia">My Github repository</a>, which introduces basic econometric models in <a href="http://julialang.org/">Julia</a>.</li>
+          <li><a href="https://github.com/tyleransom/EMalgorithmExample"><code>EM algorithm example</code></a>: Code to generate data and estimate simple versions of the EM algorithm for estimation of models with discrete type-specific unobserved heterogeneity.</li>
+        </ul>
+    <hr>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
