--- a/Publication.html
+++ b/Publication.html
@@ -113,6 +113,12 @@
     
       </header>
       <section>
+<p>Here is only <strong>a selected list</strong> of publications. The full-list is accessible under request: <a href="mailto:eelium@ust.hk"><i class="fa fa-envelope"> Email</i></a></p>
+
+<p>You can Visit the following page for the ranking of Publications in Robotic Field: <a href="https://scholar.google.ca/citations?hl=en&amp;view_op=search_venues&amp;vq=robotics"><i class="fa fa-link"> Google Citation</i></a></p>
+
+<p>Please visit: <a href="https://scholar.google.com/citations?hl=en&amp;user=CdV5LfQAAAAJ">Google Scholar Profile</a></p>
+
   <h2><a id="2022" class="anchor" href="#computercode" aria-hidden="true"><span class="octicon octicon-link"></span></a>2022</h2>
     <h3>Julia</h3>
         <ul>
