--- a/Publication.html
+++ b/Publication.html
@@ -118,12 +118,12 @@
      <p>You can Visit the following page for the ranking of Publications in Robotic Field: <a href="https://scholar.google.ca/citations?hl=en&amp;view_op=search_venues&amp;vq=robotics"><i class="fa fa-link"> Google Citation</i></a></p>
 
      <p>Please visit: <a href="https://scholar.google.com/citations?hl=en&amp;user=CdV5LfQAAAAJ">Google Scholar Profile</a></p>
-     <p><strong>Journals</strong> | <a href="/publication/#2020">2020</a>, <a href="/publication/#2019">2019</a>, <a href="/publication/#2018">2018</a>, <a      href="/publication/#2017">2017</a>, <a href="/publication/#2016">2016</a>, <a href="/publication/#2015">2015</a>, <a href="/publication/#2014">2014</a>, <a      href="/publication/#2013">2013</a></p>
+     <p><strong>Journals</strong> | <a href="/Publication/#2020">2020</a>, <a href="/publication/#2019">2019</a>, <a href="/publication/#2018">2018</a>, <a      href="/publication/#2017">2017</a>, <a href="/publication/#2016">2016</a>, <a href="/publication/#2015">2015</a>, <a href="/publication/#2014">2014</a>, <a      href="/publication/#2013">2013</a></p>
 
       <p><strong>Conferences</strong> | <a href="/publication/#2020-1">2020</a>, <a href="/publication/#2019-1">2019</a>, <a href="/publication/#2018-1">2018</a>, <a                 href="/publication/#2017-1">2017</a>, <a href="/publication/#2016-1">2016</a>, <a href="/publication/#2015-1">2015</a>, <a href="/publication/#2014-1">2014</a>, <a                        href="/publication/#2013-1">2013</a>, <a href="/publication/#2012">2012</a>, <a href="/publication/#2011">2011</a>, <a href="/publication/#2010">2010</a>, <a          href="/publication/#2009">2009</a></p>
 
 
-  <h2><a id="2022" class="anchor" href="#computercode" aria-hidden="true"><span class="octicon octicon-link"></span></a>2022</h2>
+  <h2><a id="2020" class="anchor" href="#computercode" aria-hidden="true"><span class="octicon octicon-link"></span></a>2022</h2>
     <h3>Julia</h3>
         <ul>
           <li><a href="https://tyleransom.github.io/research/JuliaPresentation.pdf">Introduction to Julia for economists</a>: Slides from a short presentation that introduces <a href="http://julialang.org/">Julia</a>.</li>
