--- a/Publication.html
+++ b/Publication.html
@@ -118,7 +118,7 @@
      <p>You can Visit the following page for the ranking of Publications in Robotic Field: <a href="https://scholar.google.ca/citations?hl=en&amp;view_op=search_venues&amp;vq=robotics"><i      class="fa fa-link"> Google Citation</i></a></p>
 
      <p>Please visit: <a href="https://scholar.google.com/citations?hl=en&amp;user=CdV5LfQAAAAJ">Google Scholar Profile</a></p>
-     <p><strong>Journals</strong> | <a href="/Publication/#2020">2020</a>, <a href="/publication/#2019">2019</a>, <a href="/publication/#2018">2018</a>, 
+     <p><strong>Journals</strong> | <a href="/Publication/#2020">2020</a>, <a href="/Publication/#2021">2019</a>, <a href="/publication/#2018">2018</a>, 
 
       <p><strong>Conferences</strong> | <a href="/publication/#2020-1">2020</a>, <a href="/publication/#2019-1">2019</a>, <a href="/publication/#2018-1">2018</a>
 
@@ -145,7 +145,7 @@
     <hr>
 
 
-<h2><a id="2020 before" class="anchor" href="#2020" aria-hidden="true"><span class="octicon octicon-link"></span></a>2020 before</h2>
+<h2><a id="2020" class="anchor" href="#2020" aria-hidden="true"><span class="octicon octicon-link"></span></a>2020 before</h2>
     <h3>Julia</h3>
         <ul>
           <li><a href="https://tyleransom.github.io/research/JuliaPresentation.pdf">Introduction to Julia for economists</a>: Slides from a short presentation that introduces <a href="http://julialang.org/">Julia</a>.</li>
