--- a/Publication.html
+++ b/Publication.html
@@ -123,7 +123,7 @@
       <p><strong>Conferences</strong> | <a href="/publication/#2020-1">2020</a>, <a href="/publication/#2019-1">2019</a>, <a href="/publication/#2018-1">2018</a>
 
 
-  <h2><a id="2020" class="anchor" href="#computercode" aria-hidden="true"><span class="octicon octicon-link"></span></a>2022</h2>
+  <h2><a id="2022" class="anchor" href="#2022" aria-hidden="true"><span class="octicon octicon-link"></span></a>2022</h2>
     <h3>Julia</h3>
         <ul>
           <li><a href="https://tyleransom.github.io/research/JuliaPresentation.pdf">Introduction to Julia for economists</a>: Slides from a short presentation that introduces <a href="http://julialang.org/">Julia</a>.</li>
@@ -134,7 +134,7 @@
     <hr>
 
 
-  <h2><a id="2021" class="anchor" href="#computercode" aria-hidden="true"><span class="octicon octicon-link"></span></a>2021</h2>
+  <h2><a id="2021" class="anchor" href="#2021" aria-hidden="true"><span class="octicon octicon-link"></span></a>2021</h2>
     <h3>Julia</h3>
         <ul>
           <li><a href="https://tyleransom.github.io/research/JuliaPresentation.pdf">Introduction to Julia for economists</a>: Slides from a short presentation that introduces <a href="http://julialang.org/">Julia</a>.</li>
@@ -145,7 +145,7 @@
     <hr>
 
 
-<h2><a id="2020" class="anchor" href="#2020" aria-hidden="true"><span class="octicon octicon-link"></span></a>2020 before</h2>
+<h2><a id="2020" class="anchor" href="#2020" aria-hidden="true"><span class="octicon octicon-link"></span></a>2020</h2>
     <h3>Julia</h3>
         <ul>
           <li><a href="https://tyleransom.github.io/research/JuliaPresentation.pdf">Introduction to Julia for economists</a>: Slides from a short presentation that introduces <a href="http://julialang.org/">Julia</a>.</li>
