--- a/Publication.html
+++ b/Publication.html
@@ -118,9 +118,8 @@
      <p>You can Visit the following page for the ranking of Publications in Robotic Field: <a href="https://scholar.google.ca/citations?hl=en&amp;view_op=search_venues&amp;vq=robotics"><i      class="fa fa-link"> Google Citation</i></a></p>
 
      <p>Please visit: <a href="https://scholar.google.com/citations?hl=en&amp;user=CdV5LfQAAAAJ">Google Scholar Profile</a></p>
-     <p><strong>Journals</strong> | <a href="/Publication/#2020">2020</a>, <a href="/Publication/#2021">2019</a>, <a href="/publication/#2018">2018</a>, 
-
-      <p><strong>Conferences</strong> | <a href="/publication/#2020-1">2020</a>, <a href="/publication/#2019-1">2019</a>, <a href="/publication/#2018-1">2018</a>
+     <p><strong>Journals</strong> | <a href="/Publication/#2022">2022</a>, <a href="/publication/#2021">2019</a>, <a href="/publication/#2018">2018</a>, 
+     <p><strong>Conferences</strong> | <a href="/publication/#2020-1">2020</a>, <a href="/publication/#2019-1">2019</a>, <a href="/publication/#2018-1">2018</a>
 
 
   <h2><a id="2022" class="anchor" href="#2022" aria-hidden="true"><span class="octicon octicon-link"></span></a>2022</h2>
