--- a/Publication.html
+++ b/Publication.html
@@ -118,7 +118,7 @@
      <p>You can Visit the following page for the ranking of Publications in Robotic Field: <a href="https://scholar.google.ca/citations?hl=en&amp;view_op=search_venues&amp;vq=robotics"><i      class="fa fa-link"> Google Citation</i></a></p>
 
      <p>Please visit: <a href="https://scholar.google.com/citations?hl=en&amp;user=CdV5LfQAAAAJ">Google Scholar Profile</a></p>
-     <p><strong>Journals</strong> | <a href="/Publication.html#2022">2022</a>, <a href="/publication/#2021">2019</a>, <a href="/publication/#2018">2018</a>, 
+     <p><strong>Journals</strong> | <a href="/Publication.html#2022">2022</a>, <a href="/publication.html#2021">2019</a>, <a href="/publication.html#2018">2018</a>, 
      <p><strong>Conferences</strong> | <a href="/publication/#2020-1">2020</a>, <a href="/publication/#2019-1">2019</a>, <a href="/publication/#2018-1">2018</a>
 
 
