--- a/Publication.html
+++ b/Publication.html
@@ -114,14 +114,12 @@
       </header>
       <section>
       <p>Here is only <strong>a selected list</strong> of publications. The full-list is accessible under request: <a href="mailto:eelium@ust.hk"><i class="fa fa-envelope"> Email</i></a></p>
+     <p>Please visit: <a href="https://scholar.google.co.uk/citations?hl=en&view_op=list_works&gmla=AJsN-F42uQuk2u5HeMmTIfLSPZOneaoapP2QeoAPZYBmHVEaoMyO9fLYJDtqgNBl03jJWYutL-9Oka5xVMcBgqwc4cEmbBtqJ9uxcseMxo0yxgG-RPmnC2U&user=2qygvtQAAAAJ">Google Scholar Profile</a></p>
 
-     <p>You can Visit the following page for the ranking of Publications in Robotic Field: <a href="https://scholar.google.ca/citations?hl=en&amp;view_op=search_venues&amp;vq=robotics"><i      class="fa fa-link"> Google Citation</i></a></p>
-
-     <p>Please visit: <a href="https://scholar.google.com/citations?hl=en&amp;user=CdV5LfQAAAAJ">Google Scholar Profile</a></p>
      <p><strong>Journals</strong> | <a href="/Publication.html#2022">2022</a>, <a href="/publication.html#2021">2021</a>, <a href="/publication.html#2020">2020</a>, , <a href="/publication.html#2019">2019</a>, href="/publication.html#2018">2018</a>, 
 
 
-     <p><strong>Conferences</strong> | <a href="/publication.html#2022-1">2022</a>, <a href="/publication.html#2021-1">2021</a>, <a href="/publication.html#2020-1">2020</a>
+     <p><strong>Conferences</strong> | <a href="/publication.html#2022-1">2022</a>, <a href="/publication.html#2021-1">2021</a>, <a href="/publication.html#2020-1">2020</a>, <a href="/publication.html#2019-1">2019</a>, <a href="/publication.html#2018-1">2018</a>
 
 
   <h2><a id="2022" class="anchor" href="#2022" aria-hidden="true"><span class="octicon octicon-link"></span></a>2022</h2>
