--- a/Publication.html
+++ b/Publication.html
@@ -154,6 +154,26 @@
           <li><a href="https://github.com/tyleransom/EMalgorithmExample"><code>EM algorithm example</code></a>: Code to generate data and estimate simple versions of the EM algorithm for estimation of models with discrete type-specific unobserved heterogeneity.</li>
         </ul>
     <hr>
+
+<h2><a id="2019" class="anchor" href="#2019" aria-hidden="true"><span class="octicon octicon-link"></span></a>2019</h2>
+    <h3>Julia</h3>
+        <ul>
+          <li><a href="https://tyleransom.github.io/research/JuliaPresentation.pdf">Introduction to Julia for economists</a>: Slides from a short presentation that introduces <a href="http://julialang.org/">Julia</a>.</li>
+          <li><a href="http://quantecon.org/notebooks.html">QuantEcon's notebook gallery</a>, which includes a few of my notebooks introducing data analysis and optimization in <a href="http://julialang.org/">Julia</a>.</li>
+          <li><a href="https://github.com/tyleransom/Julia">My Github repository</a>, which introduces basic econometric models in <a href="http://julialang.org/">Julia</a>.</li>
+          <li><a href="https://github.com/tyleransom/EMalgorithmExample"><code>EM algorithm example</code></a>: Code to generate data and estimate simple versions of the EM algorithm for estimation of models with discrete type-specific unobserved heterogeneity.</li>
+        </ul>
+    <hr>
+
+<h2><a id="2018" class="anchor" href="#2018" aria-hidden="true"><span class="octicon octicon-link"></span></a>2018</h2>
+    <h3>Julia</h3>
+        <ul>
+          <li><a href="https://tyleransom.github.io/research/JuliaPresentation.pdf">Introduction to Julia for economists</a>: Slides from a short presentation that introduces <a href="http://julialang.org/">Julia</a>.</li>
+          <li><a href="http://quantecon.org/notebooks.html">QuantEcon's notebook gallery</a>, which includes a few of my notebooks introducing data analysis and optimization in <a href="http://julialang.org/">Julia</a>.</li>
+          <li><a href="https://github.com/tyleransom/Julia">My Github repository</a>, which introduces basic econometric models in <a href="http://julialang.org/">Julia</a>.</li>
+          <li><a href="https://github.com/tyleransom/EMalgorithmExample"><code>EM algorithm example</code></a>: Code to generate data and estimate simple versions of the EM algorithm for estimation of models with discrete type-specific unobserved heterogeneity.</li>
+        </ul>
+    <hr>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
