--- a/Publication.html
+++ b/Publication.html
@@ -124,7 +124,7 @@
 
 
   <h2><a id="2022" class="anchor" href="#2022" aria-hidden="true"><span class="octicon octicon-link"></span></a>2022</h2>
-  <p><a href="/publication.html#top"><i class="fa fa-level-up"> Back to top</i></a>
+  <p><a href="/Publication.html#top"><i class="fa fa-level-up"> Back to top</i></a>
     <h3>Julia</h3>
         <ul>
           <li><a href="https://tyleransom.github.io/research/JuliaPresentation.pdf">Introduction to Julia for economists</a>: Slides from a short presentation that introduces <a href="http://julialang.org/">Julia</a>.</li>
@@ -167,6 +167,7 @@
     <hr>
 
 <h2><a id="2018" class="anchor" href="#2018" aria-hidden="true"><span class="octicon octicon-link"></span></a>2018</h2>
+<p><a href="/Publication.html#top"><i class="fa fa-level-up"> Back to top</i></a>
     <h3>Julia</h3>
         <ul>
           <li><a href="https://tyleransom.github.io/research/JuliaPresentation.pdf">Introduction to Julia for economists</a>: Slides from a short presentation that introduces <a href="http://julialang.org/">Julia</a>.</li>
