--- a/Publication.html
+++ b/Publication.html
@@ -135,7 +135,8 @@
     <hr>
 
 
-  <h2><a id="2021" class="anchor" href="#2021" aria-hidden="true"><span class="octicon octicon-link"></span></a>2021</h2>
+<h2><a id="2021" class="anchor" href="#2021" aria-hidden="true"><span class="octicon octicon-link"></span></a>2021</h2>
+<p><a href="/Publication.html#top"><i class="fa fa-level-up"> Back to top</i></a>
     <h3>Julia</h3>
         <ul>
           <li><a href="https://tyleransom.github.io/research/JuliaPresentation.pdf">Introduction to Julia for economists</a>: Slides from a short presentation that introduces <a href="http://julialang.org/">Julia</a>.</li>
@@ -147,6 +148,7 @@
 
 
 <h2><a id="2020" class="anchor" href="#2020" aria-hidden="true"><span class="octicon octicon-link"></span></a>2020</h2>
+<p><a href="/Publication.html#top"><i class="fa fa-level-up"> Back to top</i></a>
     <h3>Julia</h3>
         <ul>
           <li><a href="https://tyleransom.github.io/research/JuliaPresentation.pdf">Introduction to Julia for economists</a>: Slides from a short presentation that introduces <a href="http://julialang.org/">Julia</a>.</li>
@@ -157,6 +159,7 @@
     <hr>
 
 <h2><a id="2019" class="anchor" href="#2019" aria-hidden="true"><span class="octicon octicon-link"></span></a>2019</h2>
+<p><a href="/Publication.html#top"><i class="fa fa-level-up"> Back to top</i></a>
     <h3>Julia</h3>
         <ul>
           <li><a href="https://tyleransom.github.io/research/JuliaPresentation.pdf">Introduction to Julia for economists</a>: Slides from a short presentation that introduces <a href="http://julialang.org/">Julia</a>.</li>
