--- a/Publication.html
+++ b/Publication.html
@@ -114,8 +114,9 @@
       </header>
       <section>
       <h2><a id="Publications" class="anchor" href="#top" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</h2>
-      <p>Here is only <strong>a selected list</strong> of publications. The full-list is accessible under request: <a href="mailto:eelium@ust.hk"><i class="fa fa-envelope"> Email</i></a></p>
-     <p>Please visit: <a href="https://scholar.google.co.uk/citations?hl=en&view_op=list_works&gmla=AJsN-F42uQuk2u5HeMmTIfLSPZOneaoapP2QeoAPZYBmHVEaoMyO9fLYJDtqgNBl03jJWYutL-9Oka5xVMcBgqwc4cEmbBtqJ9uxcseMxo0yxgG-RPmnC2U&user=2qygvtQAAAAJ">Google Scholar Profile</a></p>
+      <p>Here is only <strong>a selected list</strong> of publications. The full-list is accessible under request: <a href="phd.yu.zhenhua@gmail.com"><i class="fa fa-envelope"> Email</i></a></p>
+     <p>Please visit: <a href="https://scholar.google.co.uk/citations?hl=en&view_op=list_works&gmla=AJsN-F42uQuk2u5HeMmTIfLSPZOneaoapP2QeoAPZYBmHVEaoMyO9fLYJDtqgNBl03jJWYutL-9Oka5xVMcBgqwc4cEmbBtqJ9uxcseMxo0yxgG-RPmnC2U&user=2qygvtQAAAAJ" target="_blank">Google Scholar Profile</a>
+</p>
 
      <p><strong>Journals</strong> | <a href="/Publication.html#2022">2022</a>, <a href="/Publication.html#2021">2021</a>, <a href="/Publication.html#2020">2020</a>,  <a href="/Publication.html#2019">2019</a>, <a href="/Publication.html#2018">2018</a>, 
 
