--- a/teaching.html
+++ b/teaching.html
@@ -99,7 +99,7 @@
         <h3><a href="https://dr-zhenhua-yu.github.io//personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
-          <a href="z.yu18@imperial.ac.uk" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
+          <a href="mailto:z.yu18@imperial.ac.uk" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
           <a href="https://scholar.google.co.uk/citations?hl=en&view_op=list_works&gmla=AJsN-F42uQuk2u5HeMmTIfLSPZOneaoapP2QeoAPZYBmHVEaoMyO9fLYJDtqgNBl03jJWYutL-9Oka5xVMcBgqwc4cEmbBtqJ9uxcseMxo0yxgG-RPmnC2U&user=2qygvtQAAAAJ" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
           <a href="https://www.researchgate.net/profile/Zhenhua-Yu-6"><i class="fa fa-fw fa-share-alt-square"></i> ReGate</a><br>
           <a href="https://github.com/Dr-Zhenhua-Yu"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
