--- a/Publication.html
+++ b/Publication.html
@@ -114,7 +114,7 @@
       </header>
       <section>
       <h2><a id="Publications" class="anchor" href="#top" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</h2>
-      <p>Here is only <strong>a selected list</strong> of publications. The full-list is accessible under request: <a href="phd.yu.zhenhua@gmail.com"><i class="fa fa-envelope"> Email</i></a></p>
+      <p>Here is only <strong>a selected list</strong> of publications. The full-list is accessible under request: <a href="mailto:phd.yu.zhenhua@gmail.com"><i class="fa fa-envelope"> Email</i></a></p>
      <p>Please visit: <a href="https://scholar.google.co.uk/citations?hl=en&view_op=list_works&gmla=AJsN-F42uQuk2u5HeMmTIfLSPZOneaoapP2QeoAPZYBmHVEaoMyO9fLYJDtqgNBl03jJWYutL-9Oka5xVMcBgqwc4cEmbBtqJ9uxcseMxo0yxgG-RPmnC2U&user=2qygvtQAAAAJ" target="_blank">Google Scholar Profile</a>
 </p>
 
