--- a/Publication.html
+++ b/Publication.html
@@ -127,13 +127,10 @@
 
   <h2><a id="2022" class="anchor" href="#2022" aria-hidden="true"><span class="octicon octicon-link"></span></a>2022</h2>
   <p><a href="/Publication.html#top"><i class="fa fa-level-up"> Back to top</i></a>
-    <h3>Julia</h3>
-        <ul>
-          <li><a href="https://tyleransom.github.io/research/JuliaPresentation.pdf">Introduction to Julia for economists</a>: Slides from a short presentation that introduces <a href="http://julialang.org/">Julia</a>.</li>
-          <li><a href="http://quantecon.org/notebooks.html">QuantEcon's notebook gallery</a>, which includes a few of my notebooks introducing data analysis and optimization in <a href="http://julialang.org/">Julia</a>.</li>
-          <li><a href="https://github.com/tyleransom/Julia">My Github repository</a>, which introduces basic econometric models in <a href="http://julialang.org/">Julia</a>.</li>
-          <li><a href="https://github.com/tyleransom/EMalgorithmExample"><code>EM algorithm example</code></a>: Code to generate data and estimate simple versions of the EM algorithm for estimation of models with discrete type-specific unobserved heterogeneity.</li>
-        </ul>
+    <h3>Journal</h3>
+        <p><li><p>
+ Rui Fan*, Hengli Wang*, Yuan Wang*, Ming Liu, Ioannis Pitas, &ldquo;Graph Attention Layer Evolves Semantic Segmentation for Road Pothole Detection: A Benchmark and Algorithms,&rdquo; IEEE Transactions on Image Processing <i>(T-IP)</i>, 2021. (* indicates equal contribution) <a href="/papers/2021/fan2021graph.pdf"><i class="fa fa-file-pdf-o"> pdf</i></a>
+ <a href="/papers/2021/fan2021graph.bib"><i class="fa fa-file"> bibtex</i></a>
     <hr>
 
 
