--- a/Publication.html
+++ b/Publication.html
@@ -128,12 +128,12 @@
   <h2><a id="2022" class="anchor" href="#2022" aria-hidden="true"><span class="octicon octicon-link"></span></a>2022</h2>
   <p><a href="/Publication.html#top"><i class="fa fa-level-up"> Back to top</i></a>
     <h3>Journal</h3>
-        <p><li><p>
- Rui Fan*, Hengli Wang*, Yuan Wang*, Ming Liu, Ioannis Pitas, &ldquo;Graph Attention Layer Evolves Semantic Segmentation for Road Pothole Detection: A Benchmark and Algorithms,&rdquo; IEEE Transactions on Image Processing <i>(T-IP)</i>, 2021. (* indicates equal contribution) <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf" target="_blank">pdf</a>
-<a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf"><i class="fa fa-file"> bibtex</i></a>
+        <ul>
+        <li><strong>Conferences*</strong>, Hengli Wang*, Yuan Wang*, Ming Liu, Ioannis Pitas, &ldquo;Graph Attention Layer Evolves Semantic Segmentation for Road Pothole Detection: A Benchmark and Algorithms,&rdquo; IEEE Transactions on Image Processing <i>(T-IP)</i>, 2021. (* indicates equal contribution) <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf" target="_blank">pdf</a>
+<a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf"><i class="fa fa-file"> bibtex</i></a>  .</li>
 
 
-
+       </ul>
     <hr>
 
 
