--- a/Publication.html
+++ b/Publication.html
@@ -131,7 +131,7 @@
         <ul>
        <p><font size=''4''>[7]</font>,. <strong>Conferences*</strong>, Hengli Wang*, Yuan Wang*, Ming Liu, Ioannis Pitas, &ldquo;Graph Attention Layer Evolves Semantic Segmentation for Road Pothole Detection: A Benchmark and Algorithms,&rdquo; IEEE Transactions on Image Processing <i>(T-IP)</i>, 2021. (* indicates equal contribution) <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf" target="_blank">pdf</a> <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf"><i class="fa fa-file"> bibtex</i></a>.</p>
 
-        <p>7.  <strong>Conferences*</strong>, Hengli Wang*, Yuan Wang*, Ming Liu, Ioannis Pitas, &ldquo;Graph Attention Layer Evolves Semantic Segmentation for Road Pothole Detection: A Benchmark and Algorithms,&rdquo; IEEE Transactions on Image Processing <i>(T-IP)</i>, 2021. (* indicates equal contribution) <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf" target="_blank">pdf</a> <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf"><i class="fa fa-file"> bibtex</i></a>.</p>
+        <p><font size=''3''>[7]</font>,  <strong>Conferences*</strong>, Hengli Wang*, Yuan Wang*, Ming Liu, Ioannis Pitas, &ldquo;Graph Attention Layer Evolves Semantic Segmentation for Road Pothole Detection: A Benchmark and Algorithms,&rdquo; IEEE Transactions on Image Processing <i>(T-IP)</i>, 2021. (* indicates equal contribution) <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf" target="_blank">pdf</a> <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf"><i class="fa fa-file"> bibtex</i></a>.</p>
 
 
        </ul>
