--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <p>Research Affiliate<br><a href="https://www.imperial.ac.uk/morph-lab">Morph Lab<br>Dyson School of Design Engineering </a></p>
     <h3><a href="https://dr-zhenhua-yu.github.io//">Home</a></h3>
         <h3><a href="https://dr-zhenhua-yu.github.io//research.html">Research</a></h3>
-    <h3><a href="https://dr-zhenhua-yu.github.io//research/CV.pdf">CV</a></h3>  
+    <h3><a href="https://dr-zhenhua-yu.github.io//publication/CV.pdf">CV</a></h3>  
         <h3><a href="https://dr-zhenhua-yu.github.io//Publication.html">Publication</a></h3> 
         <h3><a href="https://dr-zhenhua-yu.github.io//teaching.html">Teaching</a></h3> 
         <h3><a href="https://dr-zhenhua-yu.github.io//personal.html">Personal</a></h3>
