--- a/Publication.html
+++ b/Publication.html
@@ -93,7 +93,7 @@
         <p>Research Affiliate<br><a href="https://www.imperial.ac.uk/morph-lab">Morph Lab<br>Dyson School of Design Engineering </a></p>
     <h3><a href="https://dr-zhenhua-yu.github.io//">Home</a></h3>
         <h3><a href="https://dr-zhenhua-yu.github.io//research.html">Research</a></h3>
-    <h3><a href="https://dr-zhenhua-yu.github.io//research/CV.pdf">CV</a></h3>  
+    <h3><a href="https://dr-zhenhua-yu.github.io//publication/CV.pdf">CV</a></h3>  
         <h3><a href="https://dr-zhenhua-yu.github.io//Publication.html">Publication</a></h3> 
         <h3><a href="https://dr-zhenhua-yu.github.io//teaching.html">Teaching</a></h3> 
         <h3><a href="https://dr-zhenhua-yu.github.io//personal.html">Personal</a></h3>
@@ -129,7 +129,7 @@
         <ul>
        <p><font size=4>[7]</font>,. <strong>Conferences*</strong>, Hengli Wang*, Yuan Wang*, Ming Liu, Ioannis Pitas, &ldquo;Graph Attention Layer Evolves Semantic Segmentation for Road Pothole Detection: A Benchmark and Algorithms,&rdquo; IEEE Transactions on Image Processing <i>(T-IP)</i>, 2021. (* indicates equal contribution) <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf" target="_blank">pdf</a> <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf"><i class="fa fa-file"> bibtex</i></a>.</p>
 
-        <p><font size=4>[7]</font>,  <strong>Conferences*</strong>, Hengli Wang*, Yuan Wang*, Ming Liu, Ioannis Pitas, &ldquo;Graph Attention Layer Evolves Semantic Segmentation for Road Pothole Detection: A Benchmark and Algorithms,&rdquo; IEEE Transactions on Image Processing <i>(T-IP)</i>, 2021. (* indicates equal contribution) <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf" target="_blank">pdf</a> <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf"><i class="fa fa-file"> bibtex</i></a>.</p>
+        <p><font size=4><strong>[5]</strong></font>,  <strong>Zhenhua Yu*</strong>, Sadati, S. H., Helmut Hauser, Peter Childs, Thrishantha Nanayakkara. ``A Semi-Supervised Reservoir Computing System Based on Tapered Whisker for Mobile Robot Terrain Identification and Roughness Estimation''.  in IEEE Robotics and Automation Letters (RA-L),  2022.  <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf" target="_blank">pdf</a> <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf"><i class="fa fa-file"> bibtex</i></a>.</p>
 
         <p><font size=4><strong>[7]</strong></font>,  <strong>Conferences*</strong>, Hengli Wang*, Yuan Wang*, Ming Liu, Ioannis Pitas, &ldquo;Graph Attention Layer Evolves Semantic Segmentation for Road Pothole Detection: A Benchmark and Algorithms,&rdquo; IEEE Transactions on Image Processing <i>(T-IP)</i>, 2021. (* indicates equal contribution) <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf" target="_blank">pdf</a> <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf"><i class="fa fa-file"> bibtex</i></a>.</p>
           </ul>
