--- a/Publication.html
+++ b/Publication.html
@@ -155,7 +155,7 @@
   <p><a href="/Publication.html#top"><i class="fa fa-level-up"> Back to top</i></a>
     <h3><a id="2019" class="anchor" href="#2019" aria-hidden="true"><span class="octicon octicon-link"></span></a>Journal</h3>
         <ul>
-        <p><font size=4><strong>[5]</strong></font>,  Suo, M., Zhu, B., An, R., Sun, H., Xu, S., <strong>Zhenhua Yu</strong>,. ''Data-driven fault diagnosis of satellite power system using fuzzy Bayes risk and SVM''. aerospace science and technology, 84, 1092-1105, 2019.  
+        <p><font size=4><strong>[5]</strong></font>,  Suo, M., Zhu, B., An, R., Sun, H., Xu, S., <strong>Zhenhua Yu</strong>,. ''Data-driven fault diagnosis of satellite power system using fuzzy Bayes risk and SVM''. aerospace science and technology, 84, 1092-1105, 2019.  </p>
         </ul>
     <hr>
 
@@ -163,8 +163,7 @@
   <p><a href="/Publication.html#top"><i class="fa fa-level-up"> Back to top</i></a>
     <h3><a id="2018" class="anchor" href="#2018" aria-hidden="true"><span class="octicon octicon-link"></span></a>Journal</h3>
         <ul>
-        <p><font size=4><strong>[5]</strong></font>,  <strong>Zhenhua Yu*</strong>, Sadati, S. H., Helmut Hauser, Peter Childs, Thrishantha Nanayakkara. "A Semi-Supervised Reservoir Computing System Based on Tapered Whisker for Mobile Robot Terrain Identification and Roughness Estimation''.  in IEEE Robotics and Automation Letters (RA-L),  2022.  
-<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.pdf" target="_blank">pdf</a> <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.bib" target="_blank"> bibtex</i></a>.</p>
+        <p><font size=4><strong>[5]</strong></font>,   Chen, Y., He, Z., Zhou, D., <strong>Zhenhua Yu*</strong>, & Li, S. ``Integrated guidance and control for microsatellite real-time automated proximity operations''. Acta Astronautica, 148, 175-185. 2018.</p>
         <p><font size=4><strong>[4]</strong></font>,  <strong>Zhenhua Yu*</strong>, S. Perera, H. Hauser, P. R. N. Childs and T. Nanayakkara. "A Tapered Whisker-Based Physical Reservoir Computing System for Mobile Robot Terrain Identification in Unstructured Environments," in IEEE Robotics and Automation Letters (RA-L), vol. 7, no. 2, pp. 3608-3615, April 2022.  
 <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.pdf" target="_blank">pdf</a> <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.bib" target="_blank"> bibtex</i></a>.</p>     
         </ul>
