--- a/Publication.html
+++ b/Publication.html
@@ -120,7 +120,7 @@
 
 
      <p><strong>Journals</strong> | <a href="/Publication.html#2022">2022</a>, <a href="/Publication.html#2019">2019</a>, <a href="/Publication.html#2018">2018</a>, 
-     <p><strong>Conferences</strong> | <a href="/Publication.html#2022-1">2022</a>, <a href="/Publication.html#2021-1">2021</a>, <a href="/Publication.html#2019-1">2019</a>, <a href="/Publication.html#2018-1">2018</a>
+     <p><strong>Conferences</strong> | <a href="/Publication.html#2022-1">2022</a>, <a href="/Publication.html#2021-1">2021</a>, <a href="/Publication.html#2018-1">2018</a>
 
 
   <h2>2022</h2>
@@ -155,7 +155,8 @@
   <p><a href="/Publication.html#top"><i class="fa fa-level-up"> Back to top</i></a>
     <h3><a id="2019" class="anchor" href="#2019" aria-hidden="true"><span class="octicon octicon-link"></span></a>Journal</h3>
         <ul>
-        <p><font size=4><strong>[5]</strong></font>,  Suo, M., Zhu, B., An, R., Sun, H., Xu, S., <strong>Zhenhua Yu</strong>,. ''Data-driven fault diagnosis of satellite power system using fuzzy Bayes risk and SVM''. aerospace science and technology, 84, 1092-1105, 2019.  </p>
+        <p><font size=4><strong>[3]</strong></font>,  Suo, M., Zhu, B., An, R., Sun, H., Xu, S., <strong>Zhenhua Yu</strong>,. ''Data-driven fault diagnosis of satellite power system using fuzzy Bayes risk and SVM''. aerospace science and technology, 84, 1092-1105, 2019.  </p>
+        <p><font size=4><strong>[2]</strong></font>,  Zhou, D., <strong>Zhenhua Yu</strong>, Zhang, Y, & Li, S. ``Translational and rotational motion planning for spacecraft close proximity using sampling-based methods''. Proceedings of the Institution of Mechanical Engineers, Part G: Journal of Aerospace Engineering, 233(10), 3680-3699, 2019.  </p>
         </ul>
     <hr>
 
@@ -163,17 +164,13 @@
   <p><a href="/Publication.html#top"><i class="fa fa-level-up"> Back to top</i></a>
     <h3><a id="2018" class="anchor" href="#2018" aria-hidden="true"><span class="octicon octicon-link"></span></a>Journal</h3>
         <ul>
-        <p><font size=4><strong>[5]</strong></font>,   Chen, Y., He, Z., Zhou, D., <strong>Zhenhua Yu*</strong>, & Li, S. ``Integrated guidance and control for microsatellite real-time automated proximity operations''. Acta Astronautica, 148, 175-185. 2018.</p>
-        <p><font size=4><strong>[4]</strong></font>,  <strong>Zhenhua Yu*</strong>, S. Perera, H. Hauser, P. R. N. Childs and T. Nanayakkara. "A Tapered Whisker-Based Physical Reservoir Computing System for Mobile Robot Terrain Identification in Unstructured Environments," in IEEE Robotics and Automation Letters (RA-L), vol. 7, no. 2, pp. 3608-3615, April 2022.  
-<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.pdf" target="_blank">pdf</a> <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.bib" target="_blank"> bibtex</i></a>.</p>     
+        <p><font size=4><strong>[1]</strong></font>,   Chen, Y., He, Z., Zhou, D., <strong>Zhenhua Yu*</strong>, & Li, S. ``Integrated guidance and control for microsatellite real-time automated proximity operations''. Acta Astronautica, 148, 175-185. 2018.</p> 
         </ul>
 
     <h3><a id="2018-1" class="anchor" href="#2018-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conference</h3>
      <ul>
-        <p><font size=4><strong>[5]</strong></font>,  <strong>Zhenhua Yu*</strong>, S. Perera, H. Hauser, P. R. N. Childs and T. Nanayakkara. "A Tapered Whisker-Based Physical Reservoir Computing System for Mobile Robot Terrain Identification in Unstructured Environments," in IEEE International Conference on Robotics and Automation (ICRA 2022).IEEE. May,2022..  
-<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.pdf" target="_blank">pdf</a> <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.bib" target="_blank"> bibtex</i></a>.</p>
-       <p><font size=4><strong>[4]</strong></font>,  <strong>Zhenhua Yu*</strong>, Sadati, S. H., Helmut Hauser, Peter Childs, Thrishantha Nanayakkara. "A Semi-Supervised Reservoir Computing System Based on Tapered Whisker for Mobile Robot Terrain Identification and Roughness Estimation''.  In 2022 IEEE 5th International Conference on Soft Robotics (RoboSoft 2022). IEEE. April,2022.. 
-<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.pdf" target="_blank">pdf</a> <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.bib"target="_blank"> bibtex</i></a>.</p>
+        <p><font size=4><strong>[2]</strong></font>,  Zhou, D., <strong>Zhenhua Yu*</strong>, Zhang, Y., & Li, S.  ``Rapidly Sampling-Based Trajectory Planning for Spacecraft Proximity''. In 2018 9th International Conference on Mechanical and Aerospace Engineering (ICMAE) (pp. 116-120). IEEE.July,2018.</p>
+       <p><font size=4><strong>[1]</strong></font>,  Zhu, B., Zhang, Z., Suo, M.,  <strong>Zhenhua Yu*</strong>, & Li, S.  ``Sampled-data H∞ control for attitude stabilization and vibration suppression of flexible spacecrafts". In 2017 36th Chinese Control Conference (CCC) (pp. 6376-6381). IEEE. July,2017.</p>
        </ul>
     <hr>
     <hr>
