--- a/Publication.html
+++ b/Publication.html
@@ -151,7 +151,7 @@
     <ul>
         <p><font size=4><strong>[3]</strong></font>,  <strong>Zhenhua Yu*</strong>,  Sadati, S. H., Wegiriya, H., Childs, P., & Nanayakkara, T.``A Method to use Nonlinear Dynamics in a Whisker Sensor for Terrain Identification by Mobile Robots". In 2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2021) (pp. 8437-8443). IEEE. August,2021.  
 <a href="https://dr-zhenhua-yu.github.io//publication/2021_IROS.pdf" target="_blank">pdf</a> 
-<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:2ABGhzx88BMJ:scholar.google.com/&output=citation&scisdr=CgXXzk_wENGGnPfikWs:AAGBfm0AAAAAYmbkiWtRGiAaiD6kRaErSAgj1LPJ6oJj&scisig=AAGBfm0AAAAAYmbkiRpQE3VuY8KEv3SnMHUM5C4Yt-L1&scisf=4&ct=citation&cd=-1&hl=en" target="_blank">bibtex</a>.</p>
+<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:2ABGhzx88BMJ:scholar.google.com/&output=citation&scisdr=CgXXzk_wENGGnPfikWs:AAGBfm0AAAAAYmbkiWtRGiAaiD6kRaErSAgj1LPJ6oJj&scisig=AAGBfm0AAAAAYmbkiRpQE3VuY8KEv3SnMHUM5C4Yt-L1&scisf=4&ct=citation&cd=-1&hl=en" target="_blank">bib</a>.</p>
        </ul>
     <hr>
 
